--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
       content="Self Developed personal website build with React.js"
     />
     <!-- TODO: need to update this meta -->
-    <!-- <meta
+    <meta
       itemprop="image"
-      content="https://raw.githubusercontent.com/KevMac19/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-      /> -->
+      content="https://github.com/KevMac19/kevmac19.github.io/blob/main/Images/readme-img.png"
+    />
 
     <!-- Facebook Meta Tags -->
     <!-- TODO: need to update this meta -->
