--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Self Developed personal website build with React.js"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Kevin Macwan | Portfolio</title>
@@ -25,7 +25,7 @@
     <!-- TODO: need to update this meta -->
     <meta
       itemprop="image"
-      content="https://github.com/KevMac19/kevmac19.github.io/blob/main/Images/readme-img.png"
+      content="https://raw.githubusercontent.com/KevMac19/kevmac19.github.io/main/Images/readme-img.png"
     />
 
     <!-- Facebook Meta Tags -->
